--- a/i3/config
+++ b/i3/config
@@ -236,4 +236,4 @@ bindsym $mod+d exec dmenu_run -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
 for_window [class="^.*"] border pixel 2
 for_window [class="cad"] floating enable
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec "feh --bg-fill --restore ~/backgrounds/road.jpg"
+# exec "feh --bg-fill --restore ~/backgrounds/road.jpg"
