--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,8 +1,11 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 
-pid_file "/run/mpd/mpd.pid"
-db_file "/var/lib/mpd/mpd.db"
-state_file "/var/lib/mpd/mpdstate"
-playlist_directory "/var/lib/mpd/playlists"
-music_directory "/home/adam/shared/music"
+pid_file "~/.mpd/pid"
+db_file "~/.mpd/database"
+state_file "~/.mpd/state"
+playlist_directory "~/.mpd/playlists"
+music_directory "~/shared/music/"
+log_file "~/.mpd/log"
+port "6600"
 auto_update "yes"
+
