mpd and ncmpcpp works when run as a user but not as the mpd user

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -4,8 +4,9 @@ pid_file "~/.mpd/pid"
 db_file "~/.mpd/database"
 state_file "~/.mpd/state"
 playlist_directory "~/.mpd/playlists"
-music_directory "~/shared/music/"
+music_directory "/home/adam/shared/music/"
 log_file "~/.mpd/log"
+bind_to_address "127.0.0.1"
 port "6600"
 auto_update "yes"
 
