--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -1,3 +1,6 @@
-mpd_host "localhost"
+mpd_host "127.0.0.1"
 mpd_port "6600"
 mpd_music_dir "/home/adam/shared/music/"
+
+ncmpcpp_directory = ~/.ncmpcpp
+
