--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,8 +9,9 @@ set-option -g prefix C-Space
 bind-key C-Space send-prefix
 
 # split using - and |
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
