--- a/i3/config
+++ b/i3/config
@@ -36,7 +36,8 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 # bindsym $mod+Return exec xfce4-terminal
-bindsym $mod+Return exec konsole
+bindsym $mod+Return exec konsole -e tmux
+bindsym $mod+Shift+Return exec konsole -e "~/.local/scripts/login_to_cse.sh"
 
 # kill focused window
 bindsym $mod+Shift+q kill
