--- a/i3/config
+++ b/i3/config
@@ -34,7 +34,7 @@ font pango:Menlo for powerline 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec i3-sensible-terminal -e tmux
 
 # kill focused window
 bindsym $mod+Shift+q kill
