Modified neovim using buffers instead of tabs

--- a/i3/config
+++ b/i3/config
@@ -239,4 +239,4 @@ bindsym $mod+d exec dmenu_run -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
 for_window [class="^.*"] border pixel 2
 # for_window [class="cad"] floating enable
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec "feh --bg-fill --restore ~/backgrounds/lambo.jpg"
+exec "feh --bg-fill --restore ~/backgrounds/blood_moon.jpg"
