--- a/i3/config
+++ b/i3/config
@@ -36,7 +36,7 @@ floating_modifier $mod
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 # bindsym $mod+Return exec xfce4-terminal
-bindsym $mod+Return exec konsole -e tmux
+bindsym $mod+Return exec rxvt-unicode -e sh -c "tmux -2"
 bindsym $mod+Shift+Return exec konsole -e "~/.local/scripts/login_to_cse.sh"
 
 # kill focused window
@@ -239,4 +239,4 @@ bindsym $mod+d exec dmenu_run -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
 for_window [class="^.*"] border pixel 2
 # for_window [class="cad"] floating enable
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec "feh --bg-fill --restore ~/backgrounds/blood_moon.jpg"
+exec "feh --bg-fill --restore ~/backgrounds/blue.png"
