--- a/polybar/config
+++ b/polybar/config
@@ -30,7 +30,7 @@ item-back = #373b41
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 ;height = 27
-height = 40
+height = 50
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 3.0
@@ -52,14 +52,14 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Menlo for Powerline:pixelsize=20;1"
+font-0 = "Anonymous Pro:pixelsize=22;1"
 ; font-0 = fixed:pixelsize=18;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0:
 font-2 = siji:pixelsize=12;1
 
 modules-left = bspwm i3
 modules-center = LeftArrow date RightArrow
-modules-right = filesystem Separator xbacklight volume Separator xkeyboard Separator memory Separator cpu Separator wlan eth Separator battery temperature powermenu
+modules-right = filesystem Separator alsa Separator memory Separator cpu Separator eth Separator temperature
 
 tray-position = right
 tray-padding = 1
@@ -115,7 +115,7 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
-mount-1 = /home/adam/expansion
+# mount-1 = /home/adam/expansion
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
@@ -249,7 +249,8 @@ ramp-signal-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = enp0s3
+# interface = enp4s0
+interface = wlp3s0
 interval = 3.0
 
 format-connected-underline = #55aa55
@@ -267,7 +268,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = "%Y-%m-%d"
 date-alt = " %Y-%m-%d"
 
 time = %H:%M
@@ -279,8 +280,8 @@ format-underline = #0a6cf5
 
 label = %date% %time%
 
-[module/volume]
-type = internal/volume
+[module/alsa]
+type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL
@@ -307,34 +308,6 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = AC
-full-at = 98
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-; format-full-prefix = " "
-format-full-prefix = "bat: "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
-
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
@@ -345,8 +318,8 @@ format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
-label = %temperature%
-label-warn = %temperature%
+label = %temperature-c%
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
