Updated from other installation to convert everything to using xresources

--- a/i3/config
+++ b/i3/config
@@ -234,9 +234,10 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 # PROTIP: You can also dynamically set dmenu's colors this way:
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
+bindsym $mod+d exec dmenu_run
+# -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
 
 for_window [class="^.*"] border pixel 2
 # for_window [class="cad"] floating enable
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec "feh --bg-fill --restore ~/backgrounds/blood_moon.jpg"
+exec "feh --bg-fill --restore ~/backgrounds/solid.png"
