--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -1,12 +1,21 @@
 # See: /usr/share/doc/mpd/mpdconf.example
 
-pid_file "~/.mpd/pid"
-db_file "~/.mpd/database"
-state_file "~/.mpd/state"
-playlist_directory "~/.mpd/playlists"
-music_directory "/home/adam/shared/music/"
-log_file "~/.mpd/log"
-bind_to_address "127.0.0.1"
-port "6600"
+# The music directory is by default the XDG directory, uncomment to amend and choose a different directory
+music_directory    "~/shared/music"
+
+# Recommended location for database
+db_file            "~/.config/mpd/database"
+
+# Logs to systemd journal
+log_file           "syslog"
+
+# Uncomment to refresh the database whenever files in the music_directory are changed
 auto_update "yes"
 
+# Uncomment to enable the functionalities
+playlist_directory "~/.config/mpd/playlists"
+pid_file           "~/.config/mpd/pid"
+state_file         "~/.config/mpd/state"
+#sticker_file       "~/.config/mpd/sticker.sql"
+
+port "6600"
