--- a/polybar/config
+++ b/polybar/config
@@ -27,7 +27,7 @@ item-fore = #81a2be
 item-back = #373b41
 
 [bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 ;height = 27
 height = 50
@@ -57,7 +57,7 @@ font-0 = "Anonymous Pro:pixelsize=22;1"
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0:
 font-2 = siji:pixelsize=12;1
 
-modules-left = bspwm i3
+modules-left = i3
 modules-center = LeftArrow date RightArrow
 modules-right = filesystem Separator alsa Separator memory Separator cpu Separator eth Separator temperature
 
@@ -147,7 +147,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
