Updating conf (final)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # set to 256 colours, xterm
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # unbind C-b and set to C-a
 unbind C-b
