--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Menlo for powerline 10
+font pango:Anonymous Pro 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -34,7 +34,7 @@ font pango:Menlo for powerline 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal -e tmux
+bindsym $mod+Return exec konsole -e tmux -2
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -235,4 +235,4 @@ bindsym $mod+d exec dmenu_run -nb "$dark" -nf "$fg" -sb "$bg" -sf "$dark"
 
 for_window [class="^.*"] border pixel 2
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-# exec "feh --bg-fill --restore ~/backgrounds/road.jpg"
+exec "feh --bg-fill --restore ~/backgrounds/blackhole.jpg"
