Updated xmonad config, now have a bar

--- a/xmonad/.xmobarrc
+++ b/xmonad/.xmobarrc
@@ -1,20 +1,16 @@
-Config { font = "-*-Fixed-Bold-R-Normal-*-13-*-*-*-*-*-*-*"
-  , borderColor = "black"
-    , border = TopB
-    , bgColor = "black"
-    , fgColor = "grey"
-    , position = TopW L 100
-    , commands = [ Run Weather "CYVR" ["-t","<tempC>C","-L","18","-H","25","--normal","green","--high","red","--low","lightblue"] 36000
-      , Run Network "eth0" ["-L","0","-H","32","--normal","green","--high","red"] 10
-      -- , Run Network "eth1" ["-L","0","-H","32","--normal","green","--high","red"] 10
-      , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
-      , Run Memory ["-t","Mem: <usedratio>%"] 10
-      , Run Swap [] 10
-      , Run Com "uname" ["-s","-r"] "" 36000
-      , Run Date "%a %b %_d %Y %H:%M:%S" "date" 10
-      , Run StdinReader
-    ]
-    , sepChar = "%"
-    , alignSep = "}{"
-    , template = "%StdinReader% | %cpu% | %memory% * %swap% | %eth0% - %eth1% }{<fc=#ee9a00>%date%</fc> | %uname% | %CYVR% "
-}
+Config { font = "xft:Anonymice Powerline:size=10:antialias=true"
+       , bgColor = "#002b36"
+       , fgColor = "#657b83"
+       , position = Top
+       , lowerOnStart = True
+       , commands = [ Run DynNetwork ["-L","0","-H","32","--normal","green","--high","red"] 10
+                    , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
+                    , Run Memory ["-t","Mem: <usedratio>%"] 10
+                    , Run Date "<fc=#93a1a1>%a %b %_d %Y %H:%M</fc>" "date" 10
+                    , Run DiskIO [("/", "IO: <total>"), ("sda1", "<total>")] [] 10
+                    , Run StdinReader
+                    ]
+       , sepChar = "%"
+       , alignSep = "}{"
+       , template = "%StdinReader% }{ %cpu%  %memory%  %dynnetwork%  %diskio%  %date%"
+       }
