--- a/polybar/config
+++ b/polybar/config
@@ -140,6 +140,12 @@ label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
+[module/workspaces-xmonad]
+type = custom/script
+exce = tail -F /tmp/.xmonad-workspace-log
+exec-if = [ -p /tmp/.xmonad-workspace-log ]
+tail = true
+
 [module/i3]
 type = internal/i3
 format = <label-state> <label-mode>
