Modified polybar to attempt to account for DPI, added zathura config

--- a/polybar/config
+++ b/polybar/config
@@ -29,6 +29,7 @@ item-back = #373b41
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
+dpi = -1
 ;height = 27
 height = 50
 ;offset-x = 1%
@@ -54,8 +55,8 @@ module-margin-right = 1
 
 font-0 = "Anonymice Powerline:pixelsize=22;1"
 ; font-0 = fixed:pixelsize=18;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0:
-font-2 = Siji:pixelsize=22;1
+font-1 = "unifont:fontformat=truetype:size=22:antialias=false;1"
+font-2 = "Siji:pixelsize=22;1"
 
 modules-left = xmonad
 modules-center = LeftArrow date RightArrow
