--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,8 +38,8 @@ bind b break-pane
 set -g mouse on
 
 # colourisation of bars
-set -g pane-border-fg colour241
-set -g pane-active-border-fg colour229
+set -g pane-border-fg fg=colour241
+set -g pane-active-border-fg fg=colour229
 
 # powerline symbols
 # tmux_conf_theme_left_separator_main=''
