--- a/polybar/config
+++ b/polybar/config
@@ -29,7 +29,7 @@ item-back = #373b41
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
-dpi = -1
+dpi = 100
 ;height = 27
 height = 50
 ;offset-x = 1%
@@ -257,7 +257,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 [module/eth]
 type = internal/network
 # interface = enp4s0
-interface = wlp3s0
+interface = enp0s3
 interval = 3.0
 
 format-connected-underline = #55aa55
