--- a/polybar/config
+++ b/polybar/config
@@ -59,7 +59,7 @@ font-1 = "unifont:fontformat=truetype:size=22:antialias=false;1"
 font-2 = "Siji:pixelsize=22;1"
 
 modules-left = xmonad
-modules-center = LeftArrow date RightArrow
+modules-center = date 
 modules-right = filesystem Separator alsa Separator memory Separator cpu Separator eth Separator temperature
 
 tray-position = right
@@ -142,10 +142,10 @@ label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
 [module/xmonad]
-type = "custom/script"
-exce = "tail -f /home/adam/.tmp/xmonad-ws"
-exec-if = "[ -p /home/adam/.tmp/xmonad-ws ]"
-# tail = true
+type = custom/script
+exec = tail -f /tmp/xmonad-ws
+# exec-if = [ -p /tmp/xmonad-ws ]
+tail = true
 
 format ="<label>"
 label = "%output%"
@@ -284,7 +284,7 @@ date-alt = " %Y-%m-%d"
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+# format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
 
