--- a/polybar/config
+++ b/polybar/config
@@ -31,7 +31,7 @@ item-back = #373b41
 [bar/example]
 monitor = ${env:MONITOR:}
 width = 100%
-dpi = 100
+dpi = ${xrdb:polybar.dpi:100}
 ;height = 27
 height = 50
 ;offset-x = 1%
