--- a/polybar/config
+++ b/polybar/config
@@ -55,7 +55,7 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Anonymice Powerline:pixelsize=22;1"
+font-0 = "Cousine for Powerline:pixelsize=22;1"
 ; font-0 = fixed:pixelsize=18;1
 font-1 = "unifont:fontformat=truetype:size=22:antialias=false;1"
 font-2 = "Siji:pixelsize=22;1"
