Added picom, alacritty and updated tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,12 +21,17 @@ bind-key [ copy-mode
 bind-key ] paste-buffer
 
 # switch panes with Alt-arrow
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind h select-pane -L
+bind l select-pane -R
+bind j select-pane -D
+bind k select-pane -U
 
-set -gw mode-keys vi
+bind H resize-pane -L 10
+bind L resize-pane -R 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
+
+setw -g mode-keys vi
 
 # break out pane to new window
 bind b break-pane
@@ -38,28 +43,24 @@ bind b break-pane
 set -g mouse on
 
 # colourisation of bars
-set -g pane-border-fg fg=colour241
-set -g pane-active-border-fg fg=colour229
-
-# powerline symbols
-# tmux_conf_theme_left_separator_main=''
-# tmux_conf_theme_left_separator_sub=''
-# tmux_conf_theme_right_separator_main=''
-# tmux_conf_theme_right_separator_sub=''
+set -g pane-active-border-style bg=brightblack,fg=brightblack
+set -g pane-border-style bg=default,fg=brightblack
+# set -g pane-active-border-fg fg=red
 
 # status bar design
-set -g status-bg colour241
-set -g status-fg colour230
-setw -g window-status-current-fg colour229
-setw -g window-status-current-bg colour234
+# set -g status-bg brightblack
+set -g status-bg black
+# set -g status-fg red
+setw -g window-status-current-fg black
+setw -g window-status-current-bg blue
 setw -g window-status-current-attr bold
-setw -g window-status-current-format '#[fg=colour241,bg=colour229,bold] #I#[fg=colour0]:#[fg=colour0]#W#[fg=colour214]#F #[bg=colour241,fg=colour229,bold]'
+setw -g window-status-current-format ' #I#[fg=black]:#[fg=black]#W#[fg=black]#F #[bg=black,bold]'
 
-setw -g window-status-fg colour229
-setw -g window-status-bg colour241
+setw -g window-status-fg red
+setw -g window-status-bg cyan
 setw -g window-status-attr none
-setw -g window-status-format '#[bg=colour241,fg=colour230,bold] #I#[fg=colour229]:#[fg=colour229]#W#[fg=colour214]#F #[bg=colour241,fg=colour230,bold]'
+setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
 
-set -g status-left '#[fg=colour229,bg=colour245,bold] #H #[bg=colour241,fg=colour245,bold]'
-set -g status-right '#[bg=colour241,fg=colour245,bold]#[fg=colour229,bg=colour245,bold] Pane: #P | %H:%M:%S '
+set -g status-left '#[fg=white,bg=red,bold] #H #[bg=black] '
+set -g status-right '#[fg=white,bg=brightblack,bold] Pane: #P | %H:%M:%S '
 
