--- a/picom.conf
+++ b/picom.conf
@@ -10,7 +10,7 @@ shadow-offset-y = -15;
 # blur
 blur: {
   method = "dual_kawase";
-  strength = 15;
+  strength = 0;
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -25,7 +25,7 @@ rounded-corners-exclude = [
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
   "class_g = 'Polybar'",
-  "class_g = 'Lemonbar-xft'"
+  "class_g *= 'Bar'"
   # "class_g = 'Dunst'"
 ];
 round-borders = 1;
@@ -37,20 +37,20 @@ round-borders-exclude = [
 backend = "glx";
 
 # opacity
-active-opacity = 0.85;
-inactive-opacity = 0.6;
-# menu-opacity = 1.0;
-frame-opacity = 0.7;
-inactive-opacity-override = false;
-
-opacity-rule = [
-  "100:class_g    *= 'Brave'",
-  "100:class_g    = 'feh'",
-  "100:class_g    = 'mpv'",
-  "50:class_g     = 'Rofi'",
-  "70:class_g     *= 'URxvt'",
-  "90:class_g     *= 'Code'"
-];
+# active-opacity = 0.85;
+# inactive-opacity = 0.6;
+# # menu-opacity = 1.0;
+# frame-opacity = 0.7;
+# inactive-opacity-override = false;
+# 
+# opacity-rule = [
+#   "100:class_g    *= 'Brave'",
+#   "100:class_g    = 'feh'",
+#   "100:class_g    = 'mpv'",
+#   "50:class_g     = 'Rofi'",
+#   "70:class_g     *= 'Alacritty'",
+#   "90:class_g     *= 'Code'"
+# ];
 
 # fading
 fading = false;
