--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,14 +1,14 @@
 font:
   normal:
-    family: Hack
+    family: FiraCode
     style: Regular
 
   bold:
-    family: Hack
+    family: FiraCode
     style: Bold
 
   italic:
-    family: Hack
+    family: FiraCode
     style: Italic
 
 env:
