--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,7 @@
 # set to 256 colours, xterm
 set -g default-terminal "screen-256color"
+# set default shell
+set-option -g default-shell /usr/bin/fish
 
 # unbind C-b and set to C-a
 unbind C-b
@@ -51,14 +53,10 @@ set -g pane-border-style bg=default,fg=brightblack
 # set -g status-bg brightblack
 set -g status-bg black
 # set -g status-fg red
-setw -g window-status-current-fg black
-setw -g window-status-current-bg blue
-setw -g window-status-current-attr bold
+setw -g window-status-current-style fg=black,bg=blue,bold
 setw -g window-status-current-format ' #I#[fg=black]:#[fg=black]#W#[fg=black]#F #[bg=black,bold]'
 
-setw -g window-status-fg red
-setw -g window-status-bg cyan
-setw -g window-status-attr none
+setw -g window-status-style fg=red,bg=cyan,none
 setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
 
 set -g status-left '#[fg=white,bg=red,bold] #H #[bg=black] '
