Fixing tmux pane section colours

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,5 +60,5 @@ setw -g window-status-style fg=red,bg=cyan,none
 setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
 
 set -g status-left '#[fg=white,bg=red,bold] #H #[bg=black] '
-set -g status-right '#[fg=white,bg=brightblack,bold] Pane: #P | %H:%M:%S '
+set -g status-right '#[fg=black,bg=brightgreen,bold] Pane: #P | %H:%M:%S '
 
