Fixed strange visual inconsistencies with vim, removed use of tmux due to graphical issues

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -42,7 +42,7 @@ bind b break-pane
 # set -g mouse-select-window on
 # set -g mouse-select-pane on
 # set -g mouse-resize-pan on
-set -g mouse on
+set -g mouse off
 
 # colourisation of bars
 set -g pane-active-border-style bg=brightblack,fg=brightblack
@@ -53,12 +53,13 @@ set -g pane-border-style bg=default,fg=brightblack
 # set -g status-bg brightblack
 set -g status-bg black
 # set -g status-fg red
-setw -g window-status-current-style fg=black,bg=blue,bold
-setw -g window-status-current-format ' #I#[fg=black]:#[fg=black]#W#[fg=black]#F #[bg=black,bold]'
+setw -g window-status-current-style fg=white,bg=blue
+setw -g window-status-current-format ' #I#[fg=white]:#[fg=white]#W#[fg=white]#F #[bg=black,bold]'
 
 setw -g window-status-style fg=red,bg=cyan,none
 setw -g window-status-format ' #[fg=black]#I#[fg=black]:#[fg=black]#W#[fg=black]#F '
 
+set -g status-left-style bold
 set -g status-left '#[fg=white,bg=red,bold] #H #[bg=black] '
 set -g status-right '#[fg=black,bg=brightgreen,bold] Pane: #P | %H:%M:%S '
 
