--- a/picom.conf
+++ b/picom.conf
@@ -10,7 +10,7 @@ shadow-offset-y = -15;
 # blur
 blur: {
   method = "dual_kawase";
-  strength = 0;
+  strength = 15;
   background = false;
   background-frame = false;
   background-fixed = false;
@@ -37,20 +37,21 @@ round-borders-exclude = [
 backend = "glx";
 
 # opacity
-# active-opacity = 0.85;
-# inactive-opacity = 0.6;
-# # menu-opacity = 1.0;
-# frame-opacity = 0.7;
-# inactive-opacity-override = false;
-# 
-# opacity-rule = [
-#   "100:class_g    *= 'Brave'",
-#   "100:class_g    = 'feh'",
-#   "100:class_g    = 'mpv'",
-#   "50:class_g     = 'Rofi'",
-#   "70:class_g     *= 'Alacritty'",
-#   "90:class_g     *= 'Code'"
-# ];
+active-opacity = 0.85;
+inactive-opacity = 0.6;
+# menu-opacity = 1.0;
+frame-opacity = 0.7;
+inactive-opacity-override = false;
+
+opacity-rule = [
+  "100:class_g    *= 'Brave'",
+  "100:class_g    = 'feh'",
+  "100:class_g    = 'mpv'",
+  "70:class_g     = 'Rofi'",
+  "90:class_g     *= 'Code'",
+  "60:class_g     *= 'URxvt' && focused",
+  "30:class_g     *= 'URxvt' && !focused"
+];
 
 # fading
 fading = false;
