--- a/picom.conf
+++ b/picom.conf
@@ -10,12 +10,16 @@ shadow-offset-y = -15;
 # blur
 blur: {
   method = "dual_kawase";
-  strength = 15;
+  strength = 10;
   background = false;
   background-frame = false;
   background-fixed = false;
-  kern = "3x3box";
 }
+
+blur-background-exclude = [
+  "class_g *= 'maim'",
+  "class_g *= 'slop'"
+];
 
 # corner
 corner-radius = 12.0;
@@ -49,8 +53,8 @@ opacity-rule = [
   "100:class_g    = 'mpv'",
   "70:class_g     = 'Rofi'",
   "90:class_g     *= 'Code'",
-  "60:class_g     *= 'URxvt' && focused",
-  "30:class_g     *= 'URxvt' && !focused"
+  "85:class_g     *= 'URxvt' && focused",
+  "75:class_g     *= 'URxvt' && !focused"
 ];
 
 # fading
