--- a/picom.conf
+++ b/picom.conf
@@ -18,6 +18,7 @@ blur: {
 
 blur-background-exclude = [
   "class_g *= 'maim'",
+  "class_g = 'Kerbal Space Program'",
   "class_g *= 'slop'"
 ];
 
@@ -29,7 +30,8 @@ rounded-corners-exclude = [
   "window_type = 'dropdown_menu'",
   "window_type = 'popup_menu'",
   "class_g = 'Polybar'",
-  "class_g *= 'Bar'"
+  "class_g *= 'Bar'",
+  "class_g *= 'Kerbal Space Program'"
   # "class_g = 'Dunst'"
 ];
 round-borders = 1;
@@ -51,6 +53,7 @@ opacity-rule = [
   "100:class_g    *= 'Brave'",
   "100:class_g    = 'feh'",
   "100:class_g    = 'mpv'",
+  "100:class_g    = 'Kerbal Space Program' && argb",
   "70:class_g     = 'Rofi'",
   "90:class_g     *= 'Code'",
   "85:class_g     *= 'URxvt' && focused",
