--- a/picom.conf
+++ b/picom.conf
@@ -8,19 +8,20 @@ shadow-offset-y = -15;
 
 
 # blur
-blur: {
-  method = "dual_kawase";
-  strength = 10;
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-}
+# blur: {
+#   method = "dual_kawase";
+#   strength = 10;
+#   background = false;
+#   kernel = "5x5";
+#   background-frame = false;
+#   background-fixed = false;
+# }
 
-blur-background-exclude = [
-  "class_g *= 'maim'",
-  "class_g = 'Kerbal Space Program'",
-  "class_g *= 'slop'"
-];
+# blur-background-exclude = [
+#   "class_g *= 'maim'",
+#   "class_g = 'Kerbal Space Program'",
+#   "class_g *= 'slop'"
+# ];
 
 # corner
 corner-radius = 12.0;
@@ -43,22 +44,23 @@ round-borders-exclude = [
 backend = "glx";
 
 # opacity
-active-opacity = 0.85;
-inactive-opacity = 0.6;
-# menu-opacity = 1.0;
-frame-opacity = 0.7;
+# active-opacity = 0.85;
+# inactive-opacity = 0.6;
+# # menu-opacity = 1.0;
+# frame-opacity = 0.7;
 inactive-opacity-override = false;
 
-opacity-rule = [
-  "100:class_g    *= 'Brave'",
-  "100:class_g    = 'feh'",
-  "100:class_g    = 'mpv'",
-  "100:class_g    = 'Kerbal Space Program' && argb",
-  "70:class_g     = 'Rofi'",
-  "90:class_g     *= 'Code'",
-  "85:class_g     *= 'URxvt' && focused",
-  "75:class_g     *= 'URxvt' && !focused"
-];
+# opacity-rule = [
+#   "100:class_g    *= 'Brave'",
+#   "100:class_g    *= 'Firefox'",
+#   "100:class_g    = 'feh'",
+#   "100:class_g    = 'mpv'",
+#   "100:class_g    = 'Kerbal Space Program' && argb",
+#   "70:class_g     = 'Rofi'",
+#   "90:class_g     *= 'Code'",
+#   "85:class_g     *= 'URxvt' && focused",
+#   "75:class_g     *= 'URxvt' && !focused"
+# ];
 
 # fading
 fading = false;
